--- a/Meowcat/web/translator/to_translate/taskmemorlist.html
+++ b/Meowcat/web/translator/to_translate/taskmemorlist.html
@@ -1,64 +1,31 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-<title>Username的所有TM</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-<!-- Bootstrap -->
- <!-- 新 Bootstrap 核心 CSS 文件 -->
-<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
- 
-<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
- 
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<link href="Resources/css/bootstrap.min.css" rel="stylesheet" media="screen">
-</head>
-<body>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="Resources/js/bootstrap.min.js"></script>
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">MeowCAT</a>
-				</div>
+<!DOCTYPE html>
+<html lang="zh-CN">
+	<head>
+		<meta charset="utf-8">
+		<title>Username的所有TM</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			#content-0
+			{
+				position:absolute;
+				top:-530px;
+				left:300px;
 				
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-left">
-						<li class="active">
-							 <a href="#">个人档案</a>
-						</li>
-						<li>
-							 <a href="#">翻译任务</a>
-						</li>
-						<li>
-							 <a href="#">语言资产</a>
-						</li>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							 <a href="#">Username</a>
-						</li>
-						<li>
-							 <a href="#">Exit</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</div>
-	</div>
-			<div class="page-header">
-				<h1>
-					&nbsp
-				</h1>
-			</div>
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
+			}
+		</style>
+	</head>
+
+<body>
+	
+	<script type="text/javascript" src="/meowcat/Resources/js/trans_navigation.js"></script>
+		<div id="content-0">
+			<div class="container-fiuled col-md-10" style="width:1000px;">
 			<table class="table table-striped table-hover">
-				<thead>
+						<thead>
 					<tr>
 						<th>
 							所属项目ID
@@ -70,11 +37,12 @@
 							目标语言
 						</th>
 						<th>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							选择
 						</th>
 					</tr>
-				</thead>
-				<tbody>
+						</thead>
+						<tbody>
 					<tr>
 						<td>
 							1001
@@ -86,7 +54,8 @@
 							Chinese
 						</td>
 						<td>
-							<button type="button" class="btn btn-default btn-link"><a href="taskmemors.html">查看</a></button>
+							<button type="button" class="btn btn-default btn-link" id="clicked"><a href="taskmemors.html">查看</a></button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
 					<tr>
@@ -101,6 +70,7 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
 					<tr>
@@ -115,6 +85,7 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
 					<tr>
@@ -129,6 +100,7 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
 					<tr>
@@ -143,6 +115,7 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
 					<tr>
@@ -157,6 +130,7 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
 					<tr>
@@ -171,6 +145,7 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
 					<tr>
@@ -185,39 +160,35 @@
 						</td>
 						<td>
 							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
 						</td>
 					</tr>
-				</tbody>
-			</table>
+						</tbody>
+					</table>
+				<ul class="pagination pagination-lg">
+						<li>
+							<a href="#">Prev</a>
+						</li>
+						<li>
+					 		<a href="#">1</a>
+						</li>
+						<li>
+					 		<a href="#">2</a>
+						</li>
+						<li>
+					 		<a href="#">3</a>
+						</li>
+						<li>
+					 		<a href="#">4</a>
+						</li>
+						<li>
+							<a href="#">5</a>
+						</li>
+						<li>
+					 		<a href="#">Next</a>
+						</li>
+					</ul>
 		</div>
 	</div>
-</div>
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<ul class="pagination pagination-lg">
-				<li>
-					 <a href="#">Prev</a>
-				</li>
-				<li>
-					 <a href="#">1</a>
-				</li>
-				<li>
-					 <a href="#">2</a>
-				</li>
-				<li>
-					 <a href="#">3</a>
-				</li>
-				<li>
-					 <a href="#">4</a>
-				</li>
-				<li>
-					 <a href="#">5</a>
-				</li>
-				<li>
-					 <a href="#">Next</a>
-				</li>
-			</ul>
-		</div>
-</div>
 </body>
 </html>
