--- a/Meowcat/web/translator/to_translate/taskmemors.html
+++ b/Meowcat/web/translator/to_translate/taskmemors.html
@@ -1,63 +1,30 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-<title>Username的TM</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-<!-- Bootstrap -->
-<!-- 新 Bootstrap 核心 CSS 文件 -->
-<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
- 
-<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
- 
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<link href="Resources/css/bootstrap.min.css" rel="stylesheet" media="screen">
-</head>
-<body>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="Resources/js/bootstrap.min.js"></script>
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">MeowCAT</a>
-				</div>
+<!DOCTYPE html>
+<html lang="zh-CN">
+	<head>
+		<meta charset="utf-8">
+		<title>Username的TM</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			#content-0
+			{
+				position:absolute;
+				top:-530px;
+				left:300px;
 				
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-left">
-						<li class="active">
-							 <a href="#">个人档案</a>
-						</li>
-						<li>
-							 <a href="#">翻译任务</a>
-						</li>
-						<li>
-							 <a href="#">语言资产</a>
-						</li>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							 <a href="#">Username</a>
-						</li>
-						<li>
-							 <a href="#">Exit</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</div>
-	</div>
-			<div class="page-header">
-				<h1>
-					&nbsp
-				</h1>
-			</div>
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<table class="table table-striped table-hover">
+			}
+		</style>
+	</head>
+
+<body>
+	
+	<script type="text/javascript" src="/meowcat/Resources/js/trans_navigation.js"></script>
+		<div id="content-0">
+			<div class="container-fiuled col-md-10" style="width:1000px;">
+					<table class="table table-striped table-hover">
 				<thead>
 					<tr>
 						<th>
@@ -161,13 +128,8 @@
 						</td>
 					</tr>
 				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<ul class="pagination">
+					</table>
+					<ul class="pagination">
 				<li>
 					 <a href="#">Prev</a>
 				</li>
@@ -192,9 +154,8 @@
 				<li>
 					 <button type="button" class="btn btn-default btn-info"><a href="taskmemorlist.html">Back</a></button>
 				</li>
-			</ul>
+					</ul>
+			</div>
 		</div>
-	</div>
-</div>
 </body>
 </html>
