--- a/Meowcat/web/translator/to_translate/tasktermlist.html
+++ b/Meowcat/web/translator/to_translate/tasktermlist.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>Username的所有TB</title>
+		<title>Username的TB</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
@@ -24,171 +24,178 @@
 	<script type="text/javascript" src="/meowcat/Resources/js/trans_navigation.js"></script>
 		<div id="content-0">
 			<div class="container-fiuled col-md-10" style="width:1000px;">
-					<table class="table table-striped table-hover">
-				<thead>
-					<tr>
-						<th>
-							所属项目ID
-						</th>
-						<th>
-							源语言
-						</th>
-						<th>
-							目标语言
-						</th>
-						<th>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							操作
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>
-							1001
-						</td>
-						<td>
-							English
-						</td>
-						<td>
-							Chinese
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link"><a href="taskterms.html">查看</a></button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							1002
-						</td>
-						<td>
-							French
-						</td>
-						<td>
-							English
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link">查看</button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							1003
-						</td>
-						<td>
-							Japanese
-						</td>
-						<td>
-							Chinese
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link">查看</button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							1004
-						</td>
-						<td>
-							Spanish
-						</td>
-						<td>
-							English
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link">查看</button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							1005
-						</td>
-						<td>
-							French
-						</td>
-						<td>
-							Spanish
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link">查看</button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							1006
-						</td>
-						<td>
-							Japanese
-						</td>
-						<td>
-							English
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link">查看</button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							1007
-						</td>
-						<td>
-							Chinese
-						</td>
-						<td>
-							Spanish
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link">查看</button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							1008
-						</td>
-						<td>
-							Chinese
-						</td>
-						<td>
-							French
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-link">查看</button>
-							<button type="button" class="btn btn-default btn-link">导出</button>
-						</td>
-					</tr>
-				</tbody>
+					<table class="table">
+						<thead>
+								<tr>
+									<th>
+										ID
+									</th>
+									<th>
+										Source
+									</th>
+									<th>
+										Target
+									</th>
+									<th>
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										Action
+									</th>
+								</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>
+									1
+								</td>
+								<td>
+									relation schema
+								</td>
+								<td>
+									关系模式
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									2
+								</td>
+								<td>
+									candidate key
+								</td>
+								<td>
+									候选码
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									3
+								</td>
+								<td>
+									aggregate functions
+								</td>
+								<td>
+									聚合函数
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									4
+								</td>
+								<td>
+									trigger
+								</td>
+								<td>
+									触发器
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									5
+								</td>
+								<td>
+									derived attribute
+								</td>
+								<td>
+									派生属性
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									6
+								</td>
+								<td>
+									data dictionary
+								</td>
+								<td>
+									数据字典
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									7
+								</td>
+								<td>
+									natural join
+								</td>
+								<td>
+									自然连接
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									8
+								</td>
+								<td>
+									integrity constraints
+								</td>
+								<td>
+									完整性约束
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+						</tbody>
 					</table>
-					<ul class="pagination pagination-lg">
-				<li>
-					 <a href="#">Prev</a>
-				</li>
-				<li>
-					 <a href="#">1</a>
-				</li>
-				<li>
-					 <a href="#">2</a>
-				</li>
-				<li>
-					 <a href="#">3</a>
-				</li>
-				<li>
-					 <a href="#">4</a>
-				</li>
-				<li>
-					 <a href="#">5</a>
-				</li>
-				<li>
-					 <a href="#">Next</a>
-				</li>
-					</ul>
+
+					<div class="row clearfix">
+						<div class="col-md-6 column">
+							<ul class="pagination">
+								<li>
+									<a href="#">Prev</a>
+								</li>
+								<li>
+				 					<a href="#">1</a>
+								</li>
+								<li>
+									 <a href="#">2</a>
+								</li>
+								<li>
+									 <a href="#">3</a>
+								</li>
+								<li>
+									 <a href="#">4</a>
+								</li>
+								<li>
+									 <a href="#">5</a>
+								</li>
+								<li>
+									 <a href="#">Next</a>
+								</li>
+								<li>
+									 <button type="button" class="btn btn-default btn-info"><a href="tasktermlist.html">Back</a></button>
+								</li>
+							</ul>
+						</div>
+						<div class="col-md-6 column">
+							<div>&nbsp;</div>
+							<form role="search">
+								<div class="form-group">
+									<input type="text"/>
+									<button type="submit" class="btn btn-default">查找</button>
+								</div>
+							</form>							
+			</div>
 		</div>
-	</div>	
 </body>
 </html>
