--- a/Meowcat/web/translator/to_translate/taskterms.html
+++ b/Meowcat/web/translator/to_translate/taskterms.html
@@ -1,235 +1,201 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-<title>Username的TB</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-<!-- Bootstrap -->
-
- <!-- 新 Bootstrap 核心 CSS 文件 -->
-<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
- 
-<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
- 
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-</head>
-<body>
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">MeowCAT</a>
-				</div>
+<!DOCTYPE html>
+<html lang="zh-CN">
+	<head>
+		<meta charset="utf-8">
+		<title>Username的TB</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			#content-0
+			{
+				position:absolute;
+				top:-530px;
+				left:300px;
 				
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-left">
-						<li class="active">
-							 <a href="#">个人档案</a>
-						</li>
-						<li>
-							 <a href="#">翻译任务</a>
-						</li>
-						<li>
-							 <a href="#">语言资产</a>
-						</li>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							 <a href="#">Username</a>
-						</li>
-						<li>
-							 <a href="#">Exit</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</div>
-	</div>
-			<div class="page-header">
-				<h1>
-					&nbsp
-				</h1>
-			</div>
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<table class="table">
-				<thead>
-					<tr>
-						<th>
-							ID
-						</th>
-						<th>
-							Source
-						</th>
-						<th>
-							Target
-						</th>
-						<th>
-							Action
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>
-							1
-						</td>
-						<td>
-							relation schema
-						</td>
-						<td>
-							关系模式
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							2
-						</td>
-						<td>
-							candidate key
-						</td>
-						<td>
-							候选码
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							3
-						</td>
-						<td>
-							aggregate functions
-						</td>
-						<td>
-							聚合函数
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							4
-						</td>
-						<td>
-							trigger
-						</td>
-						<td>
-							触发器
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							5
-						</td>
-						<td>
-							derived attribute
-						</td>
-						<td>
-							派生属性
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							6
-						</td>
-						<td>
-							data dictionary
-						</td>
-						<td>
-							数据字典
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							7
-						</td>
-						<td>
-							natural join
-						</td>
-						<td>
-							自然连接
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							8
-						</td>
-						<td>
-							integrity constraints
-						</td>
-						<td>
-							完整性约束
-						</td>
-						<td>
-							<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
-	<div class="row clearfix">
-		<div class="col-md-6 column">
-			<ul class="pagination">
-				<li>
-					 <a href="#">Prev</a>
-				</li>
-				<li>
-					 <a href="#">1</a>
-				</li>
-				<li>
-					 <a href="#">2</a>
-				</li>
-				<li>
-					 <a href="#">3</a>
-				</li>
-				<li>
-					 <a href="#">4</a>
-				</li>
-				<li>
-					 <a href="#">5</a>
-				</li>
-				<li>
-					 <a href="#">Next</a>
-				</li>
-				<li>
-					 <button type="button" class="btn btn-default btn-info"><a href="tasktermlist.html">Back</a></button>
-				</li>
-			</ul>
-		</div>
-		<div class="col-md-6 column">
-				<div>&nbsp;</div>
-					<form role="search">
-						<div class="form-group">
-							<input type="text"/>
-							<button type="submit" class="btn btn-default">查找</button>
-						</div>
-					</form>
-		</div>
+			}
+		</style>
+	</head>
 
-	</div>
-</div>
+<body>
+	
+	<script type="text/javascript" src="/meowcat/Resources/js/trans_navigation.js"></script>
+		<div id="content-0">
+			<div class="container-fiuled col-md-10" style="width:1000px;">
+					<table class="table">
+						<thead>
+								<tr>
+									<th>
+										ID
+									</th>
+									<th>
+										Source
+									</th>
+									<th>
+										Target
+									</th>
+									<th>
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										Action
+									</th>
+								</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>
+									1
+								</td>
+								<td>
+									relation schema
+								</td>
+								<td>
+									关系模式
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									2
+								</td>
+								<td>
+									candidate key
+								</td>
+								<td>
+									候选码
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									3
+								</td>
+								<td>
+									aggregate functions
+								</td>
+								<td>
+									聚合函数
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									4
+								</td>
+								<td>
+									trigger
+								</td>
+								<td>
+									触发器
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									5
+								</td>
+								<td>
+									derived attribute
+								</td>
+								<td>
+									派生属性
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									6
+								</td>
+								<td>
+									data dictionary
+								</td>
+								<td>
+									数据字典
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									7
+								</td>
+								<td>
+									natural join
+								</td>
+								<td>
+									自然连接
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									8
+								</td>
+								<td>
+									integrity constraints
+								</td>
+								<td>
+									完整性约束
+								</td>
+								<td>
+									<button type="button" class="btn btn-default btn-warning">修改</button>&nbsp;&nbsp;<button type="button" class="btn btn-default btn-danger">删除</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+
+					<div class="row clearfix">
+						<div class="col-md-6 column">
+							<ul class="pagination">
+								<li>
+									<a href="#">Prev</a>
+								</li>
+								<li>
+				 					<a href="#">1</a>
+								</li>
+								<li>
+									 <a href="#">2</a>
+								</li>
+								<li>
+									 <a href="#">3</a>
+								</li>
+								<li>
+									 <a href="#">4</a>
+								</li>
+								<li>
+									 <a href="#">5</a>
+								</li>
+								<li>
+									 <a href="#">Next</a>
+								</li>
+								<li>
+									 <button type="button" class="btn btn-default btn-info"><a href="tasktermlist.html">Back</a></button>
+								</li>
+							</ul>
+						</div>
+						<div class="col-md-6 column">
+							<div>&nbsp;</div>
+							<form role="search">
+								<div class="form-group">
+									<input type="text"/>
+									<button type="submit" class="btn btn-default">查找</button>
+								</div>
+							</form>							
+			</div>
+		</div>
 </body>
 </html>
