--- a/Meowcat/web/PM/project_info/tmmemos.html
+++ b/Meowcat/web/PM/project_info/tmmemos.html
@@ -1,1 +1,194 @@
-<!--查看团队记忆库>
+<!DOCTYPE html>
+<html lang="zh-CN">
+	<head>
+		<meta charset="utf-8">
+		<title>Teamname的所有TM</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			#content-0
+			{
+				position:absolute;
+				top:-530px;
+				left:300px;
+				
+			}
+		</style>
+	</head>
+
+<body>
+	
+	<script type="text/javascript" src="/meowcat/Resources/js/PM_navigation.js"></script>
+		<div id="content-0">
+			<div class="container-fiuled col-md-10" style="width:1000px;">
+					<table class="table table-striped table-hover">
+						<thead>
+					<tr>
+						<th>
+							所属项目ID
+						</th>
+						<th>
+							源语言
+						</th>
+						<th>
+							目标语言
+						</th>
+						<th>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							选择
+						</th>
+					</tr>
+						</thead>
+						<tbody>
+					<tr>
+						<td>
+							1001
+						</td>
+						<td>
+							English
+						</td>
+						<td>
+							Chinese
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link" id="clicked"><a href="tmmemo.html">查看</a></button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							1002
+						</td>
+						<td>
+							French
+						</td>
+						<td>
+							English
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							1003
+						</td>
+						<td>
+							Japanese
+						</td>
+						<td>
+							Chinese
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							1004
+						</td>
+						<td>
+							Spanish
+						</td>
+						<td>
+							English
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							1005
+						</td>
+						<td>
+							French
+						</td>
+						<td>
+							Spanish
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							1006
+						</td>
+						<td>
+							Japanese
+						</td>
+						<td>
+							English
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							1007
+						</td>
+						<td>
+							Chinese
+						</td>
+						<td>
+							Spanish
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							1008
+						</td>
+						<td>
+							Chinese
+						</td>
+						<td>
+							French
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-link">查看</button>
+							<button type="button" class="btn btn-default btn-link">导出</button>
+						</td>
+					</tr>
+						</tbody>
+					</table>
+					<ul class="pagination pagination-lg">
+						<li>
+							<a href="#">Prev</a>
+						</li>
+						<li>
+					 		<a href="#">1</a>
+						</li>
+						<li>
+					 		<a href="#">2</a>
+						</li>
+						<li>
+					 		<a href="#">3</a>
+						</li>
+						<li>
+					 		<a href="#">4</a>
+						</li>
+						<li>
+							<a href="#">5</a>
+						</li>
+						<li>
+					 		<a href="#">Next</a>
+						</li>
+					</ul>
+			</div>	
+		</div>
+</body>
+</html>
