--- a/Meowcat/web/PM/project_info/tmmemo.html
+++ b/Meowcat/web/PM/project_info/tmmemo.html
@@ -1,1 +1,161 @@
-<!-- 项目经理：项目管理-翻译记忆库>
+<!DOCTYPE html>
+<html lang="zh-CN">
+	<head>
+		<meta charset="utf-8">
+		<title>Teamname的TM</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			#content-0
+			{
+				position:absolute;
+				top:-530px;
+				left:300px;
+				
+			}
+		</style>
+	</head>
+
+<body>
+	
+	<script type="text/javascript" src="/meowcat/Resources/js/PM_navigation.js"></script>
+		<div id="content-0">
+			<div class="container-fiuled col-md-10" style="width:1000px;">
+					<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>
+							ID
+						</th>
+						<th>
+							Source
+						</th>
+						<th>
+							Target
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							1
+						</td>
+						<td>
+							Resentment kills a fool, and envy slays the simple.
+						</td>
+						<td>
+							忿怒害死愚妄人，嫉妒杀死痴迷人。
+						</td>
+					</tr>
+					<tr>
+						<td>
+							2
+						</td>
+						<td>
+							Blessed is the man who does not walk in the counsel of the wicked or stand in the way of sinners or sit in the seat of mockers.
+						</td>
+						<td>
+							不从恶人的计谋，不站罪人的道路，不坐亵慢人的座位。
+						</td>
+					</tr>
+					<tr>
+						<td>
+							3
+						</td>
+						<td>
+							Has no slander on his tongue, who does his neighbor no wrong and casts no slur on his fellowman.
+						</td>
+						<td>
+							不以舌头谗谤人，不恶待朋友，也不随夥毁谤邻里。
+						</td>
+					</tr>
+					<tr>
+						<td>
+							4
+						</td>
+						<td>
+							A righteous man may have many troubles.
+						</td>
+						<td>
+							义人多有苦难。
+						</td>
+					</tr>
+					<tr>
+						<td>
+							5
+						</td>
+						<td>
+							Refrain from anger and turn from wrath; do not fret-it leads only to evil.
+						</td>
+						<td>
+							当止住怒气，离弃忿怒。不要心怀不平，以致作恶。
+						</td>
+					</tr>
+					<tr>
+						<td>
+							6
+						</td>
+						<td>
+							As the deer pants for streams of water, so my soul pants for you.
+						</td>
+						<td>
+							我的心切慕你，如鹿切慕溪水。
+						</td>
+					</tr>
+					<tr>
+						<td>
+							7
+						</td>
+						<td>
+							Turning your ear to wisdom and applying your heart to understanding
+						</td>
+						<td>
+							侧耳听智慧，专心求聪明。
+						</td>
+					</tr>
+					<tr>
+						<td>
+							8
+						</td>
+						<td>
+							When the righteous prosper, the city rejoices; when the wicked perish, there are shouts of joy.
+						</td>
+						<td>
+							义人享福合城喜乐，恶人灭亡人都欢呼。
+						</td>
+					</tr>
+				</tbody>
+					</table>
+					<ul class="pagination">
+				<li>
+					 <a href="#">Prev</a>
+				</li>
+				<li>
+					 <a href="#">1</a>
+				</li>
+				<li>
+					 <a href="#">2</a>
+				</li>
+				<li>
+					 <a href="#">3</a>
+				</li>
+				<li>
+					 <a href="#">4</a>
+				</li>
+				<li>
+					 <a href="#">5</a>
+				</li>
+				<li>
+					 <a href="#">Next</a>
+				</li>
+				<li>
+					 <button type="button" class="btn btn-default btn-info"><a href="tmmemos.html">Back</a></button>
+				</li>
+					</ul>
+			</div>
+		</div>
+</body>
+</html>
